# RTXNTC

./: .gitattributes  .gitignore  CMakeLists.txt  ChangeLog.md  README.md  ThirdPartyLicenses.txt
assets/models/FlightHelmet/: GlassPlasticMat.ntc  HoseMat.ntc  LeatherPartsMat.ntc  LensesMat.ntc  MetalPartsMat.ntc
assets/testfiles/: PavingStones070_5bpp.ntc
assets/testfiles/PavingStones070_5bpp_DDS/: AmbientOcclusion.dds  Color.dds  Displacement.dds  NormalDX.dds  Roughness.dds
docs/: CommandLineTool.md  ImageDiff.md  Manifest.md  Renderer.md  TextureSetFile.md
docs/integration/: BlockCompression.md  Compression.md  Context.md  InferenceOnLoad.md  InferenceOnSample.md
libraries/: ntc.py
libraries/ntc-utils/: CMakeLists.txt
libraries/ntc-utils/src/: BufferLoading.cpp  DeviceUtils.cpp  GraphicsBlockCompressionPass.cpp  GraphicsDecompressionPass.cpp  Manifest.cpp  (+1 more)
samples/renderer/: CMakeLists.txt  CoopVecShaders.cfg  NtcForwardShadingPass.cpp  NtcForwardShadingPass.h  NtcForwardShadingPass.hlsl  NtcForwardShadingPassConstants.h  NtcForwardShadingPass_CoopVec.slang  NtcMaterial.h  NtcMaterialLoader.cpp  NtcMaterialLoader.h  NtcSceneRenderer.cpp  Shaders.cfg
support/tests/: make_test_ntc_files.py  test.py
support/tests/imagediff/: CMakeLists.txt  ImageDiff.cpp  README.md
support/tools/: compression_study.py  convert_gltf_materials.py  release_files.txt
tools/cli/: GraphicsPasses.cpp  GraphicsPasses.h  NtcCommandLine.cpp  Utils.cpp  Utils.h
tools/explorer/: FlatImageView.cpp  FlatImageView.h  ModelView.cpp  ModelView.h  NtcExplorer.cpp
(+7 files in other folders)
